--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ scikit-learn==1.4.0
 scipy==1.12.0
 seaborn==0.13.1
 tabulate==0.9.0
+tensorboard==2.15.1
 torch==2.1.2
 torchinfo==1.8.0
+torchsummary==1.5.1
 torchvision==0.16.2
 tqdm==4.66.1
