--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,101 @@
-# This file was automatically generated. Hence other versions of the packages might work as well.
-matplotlib==3.8.2
-numpy==1.26.3
-pandas==2.2.0
+absl-py==2.1.0
+appnope==0.1.4
+asttokens==2.4.1
+astunparse==1.6.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+cloudpickle==3.0.0
+comm==0.2.2
+contourpy==1.2.1
+cycler==0.12.1
+debugpy==1.8.1
+decorator==5.1.1
+dm-tree==0.1.8
+executing==2.0.1
+filelock==3.14.0
+flatbuffers==24.3.25
+fonttools==4.51.0
+fsspec==2024.3.1
+gast==0.5.4
+google-pasta==0.2.0
+grpcio==1.63.0
+h5py==3.11.0
+idna==3.7
+ipykernel==6.29.4
+ipython==8.24.0
+jax==0.4.27
+jaxlib==0.4.27
+jedi==0.19.1
+Jinja2==3.1.4
+joblib==1.4.2
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+keras==3.3.3
+kiwisolver==1.4.5
+libclang==18.1.1
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.8.4
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+ml-dtypes==0.3.2
+mpmath==1.3.0
+namex==0.0.8
+nest-asyncio==1.6.0
+networkx==3.3
+numpy==1.26.4
+opt-einsum==3.3.0
+optree==0.11.0
+packaging==24.0
+pandas==2.2.2
+parso==0.8.4
+pexpect==4.9.0
+pillow==10.3.0
+platformdirs==4.2.1
+plotly==5.22.0
+prompt-toolkit==3.0.43
+protobuf==4.25.3
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==16.0.0
+Pygments==2.18.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+pytorch-ranger==0.1.1
+pytz==2024.1
+pyzmq==26.0.3
 qsc==0.1.2
 requests==2.31.0
-scikit-learn==1.4.0
-scipy==1.12.0
-seaborn==0.13.1
+rich==13.7.1
+scikit-learn==1.4.2
+scipy==1.13.0
+seaborn==0.13.2
+six==1.16.0
+stack-data==0.6.3
+sympy==1.12
 tabulate==0.9.0
-tensorboard==2.15.1
-torch==2.1.2
+tenacity==8.3.0
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+tensorflow-io-gcs-filesystem==0.37.0
+tensorflow-probability==0.24.0
+termcolor==2.4.0
+threadpoolctl==3.5.0
+torch==2.3.0
+torch-optimizer==0.3.0
+torchaudio==2.3.0
 torchinfo==1.8.0
 torchsummary==1.5.1
-torchvision==0.16.2
-tqdm==4.66.1
+torchvision==0.18.0
+tornado==6.4
+tqdm==4.66.4
+traitlets==5.14.3
+typing_extensions==4.11.0
+tzdata==2024.1
+urllib3==2.2.1
+wcwidth==0.2.13
+Werkzeug==3.0.3
+wrapt==1.16.0
